--- a/style.css
+++ b/style.css
@@ -1,11 +1,73 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
+
 body{
+    height: 100vh; /*100% da altura da viewport*/
+    box-sizing: border-box;
     background-color: rgb(20, 12, 29);
+
     color: azure;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+
     line-height: 1.5;
 }
 
-strong{
-    color: rgb(240, 64, 217);
+
+.titulo-destaque {
+    color: rgb(240, 66, 217);
+}
+
+.apresentacao{
+    margin: 10% 15%;
+    display: flex;
+    align-items: center;
+
+    justify-content: space-between;
+}
+
+
+.apresentacao__conteudo{
+    width: 615px;
+    display: flex;
+    flex-direction: column;
+
+    gap: 40px;
+}
+
+.apresentacao__conteudo__titulo{
+    font-size: 36px;
+}
+
+.apresentacao__conteudo__paragrafo{
+    font-size: 24px;
+}
+
+.apresentacao__imagem{
+    height: 350px;
+    border-radius: 25px;
+    border: 3px rgb(240, 66, 217) solid;
+}
+
+.apresentacao__links{
+    display: flex;
+    justify-content: space-between;
+}
+
+.apresentacao__links__botao{
+    background-color: rgb(240, 66, 217);
+    width: 280px;
+    text-align: center;
+
+    padding: 21.5px 0;
+    border-radius: 16px;
+    font-size: 24px;
+
+    text-decoration: none;
+    font-weight: 600;
+
 }
